--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -79,14 +79,14 @@ jobs:
           RELEASE_ID=$(echo $RESPONSE | jq -r .id)
           echo "::set-output name=release_id::$RELEASE_ID"
 
-      - name: Upload paper-srv-compose.yml as release asset
+      - name: Upload chthon-mc-compose.yml as release asset
         id: upload_compose
         run: |
-          # Upload paper-srv-compose.yml
+          # Upload chthon-mc-compose.yml
           curl -L -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/octet-stream" \
-            --data-binary @paper-srv-compose.yml \
+            --data-binary @chthon-mc-compose.yml \
             "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.create_release.outputs.release_id }}/assets?name=paper-srv-compose.yml"
       
           # Upload .env
