--- a/conf/server.properties
+++ b/conf/server.properties
@@ -7,16 +7,16 @@ broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
 debug=false
-difficulty=normal
+difficulty=hard
 enable-command-block=false
-enable-jmx-monitoring=false
-enable-query=false
+enable-jmx-monitoring=true
+enable-query=true
 enable-rcon=false
 enable-status=true
 enforce-secure-profile=true
-enforce-whitelist=false
+enforce-whitelist=true
 entity-broadcast-range-percentage=100
-force-gamemode=false
+force-gamemode=true
 function-permission-level=2
 gamemode=survival
 generate-structures=true
@@ -25,8 +25,8 @@ hardcore=false
 hide-online-players=false
 initial-disabled-packs=
 initial-enabled-packs=vanilla
-level-name=Chthon MC
-level-seed=
+level-name=Chthon
+level-seed=-950547527103331411
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
