--- a/conf/server.properties
+++ b/conf/server.properties
@@ -26,7 +26,7 @@ hide-online-players=false
 initial-disabled-packs=
 initial-enabled-packs=vanilla
 level-name=Chthon
-level-seed=-950547527103331411
+level-seed=
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
