--- a/chthon-mc-compose.yml
+++ b/chthon-mc-compose.yml
@@ -23,8 +23,8 @@ services:
         max-file: "3"
     ports:
       - 8080:8080/tcp
-      - 19132:19132/tcp
-      - 19133:19133/tcp
+      - 19132:19132/udp
+      - 19133:19133/udp
       - 24454:24454/udp
       - 25565:25565/tcp
       - 25565:25565/udp
