--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -68,10 +68,10 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Replace {{TAG}} in .env and chthon-mc-compose.yaml
+      - name: Replace {{TAG}} in .env and compose.yaml
         run: |
           sed -i "s|{{TAG}}|${{ steps.version.outputs.version }}|g" .env
-          sed -i "s|{{TAG}}|${{ steps.version.outputs.version }}|g" chthon-mc-compose.yaml
+          sed -i "s|{{TAG}}|${{ steps.version.outputs.version }}|g" compose.yaml
 
       - name: Install jq
         run: sudo apt-get install -y jq
@@ -93,9 +93,9 @@ jobs:
           RELEASE_ID=$(echo "$RESPONSE" | jq -r .id)
           echo "release_id=$RELEASE_ID" >> $GITHUB_OUTPUT
 
-      - name: Upload chthon-mc-compose.yaml and .env as release assets
+      - name: Upload compose.yaml and .env as release assets
         run: |
-          for file in chthon-mc-compose.yaml .env; do
+          for file in compose.yaml .env; do
             curl -L -X POST \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               -H "Content-Type: application/octet-stream" \
