--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -93,12 +93,23 @@ jobs:
           RELEASE_ID=$(echo "$RESPONSE" | jq -r .id)
           echo "release_id=$RELEASE_ID" >> $GITHUB_OUTPUT
 
-      - name: Upload compose.yaml and .env as release assets
+      - name: Upload release assets
         run: |
-          for file in compose.yaml .env; do
+          for file in chthon-mc-compose.yml .env; do
             curl -L -X POST \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               -H "Content-Type: application/octet-stream" \
               --data-binary @$file \
               "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.create_release.outputs.release_id }}/assets?name=$(basename $file)"
+          done
+
+          for file in k8s/*; do
+            if [ -f "$file" ]; then
+              echo "Uploading $file..."
+              curl -L -X POST \
+                -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                -H "Content-Type: application/octet-stream" \
+                --data-binary @$file \
+                "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.create_release.outputs.release_id }}/assets?name=$(basename $file)"
+            fi
           done
