--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -78,6 +78,8 @@ jobs:
 
       - name: Create GitHub Release
         id: create_release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           VERSION=${{ steps.version.outputs.version }}
           TAG="v$VERSION"
