--- a/k8s/chthon-mc.yaml
+++ b/k8s/chthon-mc.yaml
@@ -33,6 +33,8 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/hostname: chthon-srv-0
+      image-pull-secrets:
+        - name: ghcr-secret
       containers:
         - name: minecraft
           image: ghcr.io/drewrjensen/chthon-mc:1.21.7-1
