--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -115,6 +115,6 @@ jobs:
       - name: Upload release assets
         run: |
           TAG="v${{ steps.version.outputs.version }}"
-          gh release upload "$TAG" compose.yaml .env k8s/chthon-mc.yaml --repo "${{ github.repository }}"
+          gh release upload "$TAG" compose.yaml .env k8s/chthon-mc.yaml k8s/chthon-mc-ingress.yaml --repo "${{ github.repository }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
