--- a/k8s/chthon-mc.yaml
+++ b/k8s/chthon-mc.yaml
@@ -1,15 +1,4 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: chthon-mc-data
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
----
-apiVersion: v1
 kind: ConfigMap
 metadata:
   name: chthon-mc-env
@@ -52,7 +41,7 @@ spec:
             - configMapRef:
                 name: chthon-mc-env
           volumeMounts:
-            - name: data
+            - name: host-worlds
               mountPath: /srv/papermc/worlds
           resources:
             requests:
@@ -62,9 +51,10 @@ spec:
               memory: "8Gi"
               cpu: "2"
       volumes:
-        - name: data
-          persistentVolumeClaim:
-            claimName: chthon-mc-data
+        - name: host-worlds
+          hostPath:
+            path: /opt/minecraft/worlds
+            type: DirectoryOrCreate
 ---
 apiVersion: v1
 kind: Service
