--- a/k8s/chthon-mc-ingress.yaml
+++ b/k8s/chthon-mc-ingress.yaml
@@ -7,12 +7,12 @@ spec:
     - web
     - websecure
   routes:
-    - match: Host(`mc.chthon.xyz`) && PathPrefix(`/stats`)
+    - match: "(Host(`mc.chthon.xyz`) || Host(`10.0.0.254`)) && PathPrefix(`/stats`)"
       kind: Rule
       services:
         - name: chthon-mc-web
           port: 8804
-    - match: Host(`mc.chthon.xyz`)
+    - match: "Host(`mc.chthon.xyz`) || Host(`10.0.0.254`)"
       kind: Rule
       services:
         - name: chthon-mc-web
