--- a/plugins/Plan/config.yml
+++ b/plugins/Plan/config.yml
@@ -302,5 +302,6 @@ Plugins:
           - ExampleTown
     ViaVersion:
         Enabled: true
+# The files are placed in /Plan/web/ if the setting is 'true' when accessed.
 Customized_files:
     Path: "web"
