--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,63 @@
 *.jar
-!plugins/*.jar
 !paper*.jar
+
+.vscode/
+cache/
+Chthon/
+Chthon_nether/
+Chthon_the_end/
+crash-reports/
+libraries/
+logs/
+plugins/
+!plugins/*.jar
+versions/
+
+plugins/.paper-remapped/
+!plugins/AuraSkills/
+
+plugins/DHSupport/
+!plugins/DHSupport/config.yml
+plugins/dynmap/
+!plugins/dynmap/configuration.txt
+!plugins/Essentials/
+!plugins/floodgate/
+plugins/Geyser-Spigot/
+!plugins/Geyser-Spigot/config.yml
+plugins/GeyserExtras/
+!plugins/GeyserExtras/config.yml
+plugins/GSit/
+!plugins/GSit/config.yml
+plugins/ImageFrame/
+!plugins/ImageFrame/config.yml
+plugins/LuckPerms/
+!plugins/LuckPerms/config.yml
+plugins/MiniMOTD/
+!plugins/MiniMOTD/main.conf
+!plugins/MiniMOTD/plugin_settings.conf
+!plugins/PaperTweaks/
+!plugins/PlaceholderAPI/
+plugins/Plan/
+!plugins/Plan/config.yml
+plugins/PrefiX/
+!plugins/PrefiX/config.yml
+plugins/QuickShop-Hikari/
+!plugins/QuickShop-Hikari/config.yml
+!plugins/SeeMore/
+plugins/SkilnsRestorer/
+!plugins/SkilnsRestorer/config.yml
+plugins/spark/
+!plugins/spark/config.json
+!plugins/TheNewEconomy/
+plugins/update/
+!plugins/Vault/config.yml
+!plugins/ViaBackwards/
+!plugins/ViaVersion/
+!plugins/voicechat/
+plugins/WorldEdit/
+!plugins/WorldEdit/config.yml
+!plugins/WorldEditSelectionVisualizer/
+plugins/WorldGuard/
+!plugins/WorldGuard/config.yml
+plugins/WorldGuardRegionProtect/
+!plugins/WorldGuardRegionProtect/config.yml
