--- a/plugins/QuickShop-Hikari/config.yml
+++ b/plugins/QuickShop-Hikari/config.yml
@@ -1,7 +1,7 @@
 # QuickShop-Hikari Plugin Configuration
 
 # Do not touch this if you don't know what you're doing!
-config-version: 1032
+config-version: 1033
 
 # Set the default language code the plugin should use
 # Set it to default will use your system language.
@@ -463,6 +463,10 @@ shop:
     show-enchantments: true
     # Display the effects on the item (e.g. Tools)
     show-durability: true
+  display-coords:
+    x: '0.5'
+    y: '0.5'
+    z: '0.5'
 # List of items that can't be sold in shops.
 # Anyone with the quickshop.bypass.<itemID> permission can bypass it.
 # Add the reference the item lookup table by adding @ before the name.
