--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Jul 03 12:32:05 MDT 2025
+#Mon Aug 25 20:09:26 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -11,7 +11,7 @@ difficulty=normal
 enable-command-block=false
 enable-jmx-monitoring=true
 enable-query=true
-enable-rcon=false
+enable-rcon=true
 enable-status=true
 enforce-secure-profile=true
 enforce-whitelist=true
@@ -43,7 +43,7 @@ prevent-proxy-connections=false
 pvp=true
 query.port=25565
 rate-limit=0
-rcon.password=
+rcon.password=kitten cosmetics catty
 rcon.port=25575
 region-file-compression=deflate
 require-resource-pack=false
