--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,20 @@
-# ---- binaries ----
-*.jar
-!paper*.jar            # allow Paper jars in repo root
-!plugins/*.jar         # allow plugin jars directly under plugins/
-
 # ---- editor & runtime ----
 .vscode/
 cache/
-Chthon/
-Chthon_nether/
-Chthon_the_end/
 crash-reports/
 libraries/
 logs/
 versions/
 
+# ---- World data ----
+Chthon/
+Chthon_nether/
+Chthon_the_end/
+
 # ---- plugins: default deny, then explicit allows ----
 plugins/**             # ignore everything under plugins/
 !plugins/              # but keep traversing the directory
+!plugins/*.jar         # allow plugin jars directly under plugins/
 
 plugins/.paper-remapped/
 
