--- a/plugins/QuickShop-Hikari/config.yml
+++ b/plugins/QuickShop-Hikari/config.yml
@@ -66,7 +66,7 @@ currency: Diamond
 logging:
   # Enable logging?
   # The log file is located at "plugins/QuickShop/qs.log".
-  enable: true
+  enable: false
   # Should QuickShop log shop trading/creations?
   log-actions: true
   # Should QuickShop log balance before and after when trading?
@@ -597,7 +597,7 @@ debug:
   # Should we disable the debug logger?
   # This will save a lot of execution time but will make reporting bugs
   # and getting support harder because of the lack of information.
-  disable-debuglogger: false
+  disable-debuglogger: true
   # Log stacktrace when deleting shop?
   shop-deletion: false
   # Delete corrupt shops while loading?
